# combat_cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  vcpkg.json
.github/workflows/: cmake.yml  codeql-analysis.yml  vcpkg  vcpkg.yml
app/: CMakeLists.txt  main.cpp
builds/ninja-multi-vcpkg/: CMakeCache.txt
core/: CMakeLists.txt
core/include/: Armour.hpp  Item.hpp
include/: Armour.hpp  Combatant.hpp  Die.hpp  Item.hpp  States.hpp  Utility.hpp  Weapon.hpp
include/combat_cpp/: Armour.hpp  Combatant.hpp  GameLogic.hpp  States.hpp  Utility.hpp  Weapon.hpp
legacy_solo/: CMakeLists.txt
legacy_solo/include/: GameLogic.hpp  Weapon.hpp
legacy_solo/messages/: CMakeLists.txt
legacy_solo/src/: main.cpp
libs/: CMakeLists.txt
libs/combat_cpp/: CMakeLists.txt
libs/combat_cpp/include/combat_cpp/: Utility.hpp
libs/combat_cpp/src/: Combatant.cpp
libs/messages/: CMakeLists.txt
messages/: CMakeLists.txt  compile_test.proto
multiplayer/include/: DungeonMaster.hpp
multiplayer/src/: DungeonMaster.cpp
proto/: CMakeLists.txt
proto/messages/: CMakeLists.txt
src/: Armour.cpp  Combatant.cpp  Die.cpp  GameLogic.cpp  Utility.cpp  Weapon.cpp  all_tests.cpp  main.cpp  runAllTests.cpp
test/: CMakeLists.txt  all_tests.cpp  state_tests.cpp  test_combatant.cpp  test_proto.cpp
