cmake_minimum_required(VERSION 3.21)
project(combat_cpp VERSION 0.1.0 LANGUAGES CXX)
enable_testing()

#----------------------------------------------------------------
# Add library directories
#----------------------------------------------------------------
add_subdirectory(libs)

#----------------------------------------------------------------
# Add Apps
#----------------------------------------------------------------
add_subdirectory(app)

#----------------------------------------------------------------
# Add Tests
#----------------------------------------------------------------
add_subdirectory(test)